<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_activity"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sedes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="conocerSedes"
            android:text="SEDES"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="contactarSede"
            android:text="CONTÁCTANOS"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_Entradas"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:src="@drawable/entrada" />

    <Button
        android:id="@+id/button_Entradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="conocerEntradas"
        android:text="@string/menu_entradas"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView_Platos"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:src="@drawable/plato_fuerte" />

    <Button
        android:id="@+id/button2_Platos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="conocerPlatos"
        android:text="@string/menu_platos"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView3_Bebidas"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/bebidas" />

    <Button
        android:id="@+id/button3_Bebidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="conocerBebidas"
        android:text="@string/menu_bebidas"
        android:textSize="20sp" />

</LinearLayout>